# DualQuaternion

./: CMakeLists.txt  README.md  main.cpp
src/: CubeApp.cpp  CubeApp.h  DualQuaternionBasics.c  DualQuaternionBasics.cpp  DualQuaternionBasics.h  DualQuaternionGeometry.c  DualQuaternionGeometry.cpp  DualQuaternionGeometry.h  main.cpp
